use-cases/two-tier-architectures/gitops/svc-plus.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-plus
  namespace: nginx1
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 30843
    protocol: TCP
    name: https
  selector:
    app: nginx-plus
---

apiVersion: v1
kind: Service
metadata:
  name: nginx-plus
  namespace: nginx2
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    nodePort: 30844
    protocol: TCP
    name: https
  selector:
    app: nginx-plus
