use-cases/two-tier-architectures/gitops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-gitops
  namespace: gitops
spec:
  ingressClassName: gitops
  rules:
  - host: gitops.f5demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-svc
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-svc
            port:
              number: 80
